Pull request #1091: fix/AG-10485 filteringlog scrollbar
Merge in EXTENSIONS/browser-extension from fix/AG-10485 to master

Squashed commit of the following:

commit b418100115cb2fbdd530d0fac25176e61b31b563
Author: Anton <a.kaprielov@adguard.com>
Date:   Thu Oct 7 12:06:55 2021 +0300

    fix/AG-10485 filteringlog scrollbar

--- a/Extension/src/pages/filtering-log/components/FilteringEvents/filtering-events.pcss
+++ b/Extension/src/pages/filtering-log/components/FilteringEvents/filtering-events.pcss
@@ -7,22 +7,13 @@
         box-sizing: border-box;
     }
 
-    .list {
-        -ms-overflow-style: none;
-        scrollbar-width: none;
-
-        &::-webkit-scrollbar {
-            display: none;
-        }
-    }
-
     &__inner {
         table-layout: fixed;
         width: 100%;
         height: calc(100% - 30px);
 
         @media (min-width: 640px) {
-            height: calc(100% - 131px);
+            height: calc(100% - 116px);
         }
 
         & .thead .th {
