--- a/Extension/src/pages/filtering-log/styles/common.pcss
+++ b/Extension/src/pages/filtering-log/styles/common.pcss
@@ -5,21 +5,24 @@ body,
 }
 
 *::-webkit-scrollbar {
-    @media (prefers-color-scheme: dark) {
-        width: 12px;
-    }
+    width: 12px;
 }
 
 *::-webkit-scrollbar-track {
+    background: var(--gray100);
+
     @media (prefers-color-scheme: dark) {
         background: var(--grayDark);
     }
 }
 
 *::-webkit-scrollbar-thumb {
+    background-color: var(--gray300);
+    border-radius: 20px;
+    border: 3px solid var(--gray100);
+
     @media (prefers-color-scheme: dark) {
         background-color: var(--gray700);
-        border-radius: 20px;
         border: 3px solid var(--grayDark);
     }
 }
@@ -161,10 +164,6 @@ button.green-button {
         }
     }
 
-    *::-webkit-scrollbar {
-        width: 12px;
-    }
-
     *::-webkit-scrollbar-track {
         background: var(--gray100);
     }
@@ -181,10 +180,6 @@ button.green-button {
         &--green {
             color: var(--white);
         }
-    }
-
-    *::-webkit-scrollbar {
-        width: 12px;
     }
 
     *::-webkit-scrollbar-track {
